# TalkTree-Edit

./: .gitignore  PRIVACY.md  README.md  package-lock.json  prettierrc.json
.github/workflows/: tauri-action.yml
Anleitungen/: Erste_Schritte.md
Anleitungen/Audio/: Audio.md
Anleitungen/Bilder/: Bilder.md
Anleitungen/Einstellungen/: Einstellungen.md  Farben.md  Server.md  Speechgen.md
TalkTree_Edit/: b64.txt  index.html  package-lock.json  package.json  style.css  tsconfig.json  vite.config.ts
TalkTree_Edit/Anleitungen/: Erste_Schritte.md  Inhalt.md
TalkTree_Edit/Anleitungen/Audio/: Audio.md  Neu.md
TalkTree_Edit/Anleitungen/Bilder/: Bilder.md  Vorlage.md
TalkTree_Edit/Anleitungen/Einstellungen/: Baum-ID.md  Einstellungen.md  Farben.md  Server.md  Speechgen.md
TalkTree_Edit/Anleitungen/Installation/: download.md  macos.md  windows.md
TalkTree_Edit/Devlog/: CHANGELOG.md  Datenschutz.md  NEWS.md
TalkTree_Edit/src/: globals.ts  index.tsx
TalkTree_Edit/src-tauri/: Cargo.toml  tauri.conf.json
TalkTree_Edit/src-tauri/capabilities/: default.json
TalkTree_Edit/src-tauri/src/: lib.rs  main.rs  websocket_server.rs
TalkTree_Edit/src/__main__/: __main__.tsx  _init_.ts  validation.ts
Talk_TreeEdit/Anleitungen/: Erste_Schritte.md
Talk_TreeEdit/src-tauri/: tauri.conf.json
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/resources/: default.xlsx
src-tauri/src/: lib.rs  speechgen_io.rs
src/__main__/: validation.ts
src/types/: dictionary.d.ts  types.ts
src/utils/: grid.ts  helpers.ts  msgpackr.ts  resize_window.ts
(+83 files in other folders)
